--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=GarridoYZablah_AlejandraYNajmah_LabSemana4
-main.class=garridoyzablah_alejandraynajmah_labsemana4.GarridoYZablah_AlejandraYNajmah_LabSemana4
+main.class=garridoyzablah_alejandraynajmah_labsemana4.Ejercicio_Filtrar
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
